bin_PROGRAMS = icegenerator

icegenerator_SOURCES = circular.cpp log.cpp streamer.cpp sgnl_handler.cpp synch.cpp config.cpp main.cpp selector.cpp data_streamer.cpp data_server.cpp player.cpp meta_parser.cpp

noinst_HEADERS = circular.h log.h streamer.h sgnl_handler.h synch.h config.h player.h data_streamer.h data_server.h main.h selector.h globals.h meta_parser.h
