bin_PROGRAMS = icegenerator
SUBDIRS = tests

NULL =

icegenerator_SOURCES = \
  circular.cpp \
  config.cpp \
  data_server.cpp \
  data_streamer.cpp \
  external_handlers.cpp \
  log.cpp \
  main.cpp \
  meta_parser.cpp \
  player.cpp \
  selector.cpp \
  sgnl_handler.cpp \
  streamer.cpp \
  synch.cpp \
  utils.cpp \
  $(NULL)

noinst_HEADERS = \
  circular.h \
  config.h \
  config_keys.h \
  data_server.h \
  data_streamer.h \
  external_handlers.h \
  globals.h \
  log.h \
  main.h \
  meta_parser.h \
  player.h \
  selector.h \
  sgnl_handler.h \
  streamer.h \
  synch.h \
  utils.h \
  $(NULL)
