check_PROGRAMS = catch
TESTS = catch

NULL =

catch_SOURCES = \
  _catch_stub_circular.cpp \
  _catch_stub_config.cpp \
  _catch_stub_data_server.cpp \
  _catch_stub_data_streamer.cpp \
  _catch_stub_log.cpp \
  _catch_stub_main.cpp \
  _catch_stub_meta_parser.cpp \
  _catch_stub_player.cpp \
  _catch_stub_selector.cpp \
  _catch_stub_sgnl_handler.cpp \
  _catch_stub_streamer.cpp \
  _catch_stub_synch.cpp \
  _catch_stub_utils.cpp \
  $(NULL)

